force-app/main/default/objects/Transition__c/Transition__c.object-meta.xml
<CustomObject>
    <label>Transition</label>
    <nameField>
        <label>Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>