force-app/main/default/objects/Transition__c/fields/Abandoned_Letter_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Letter_Mailed__c</fullName>
    <description>Date abandoned letter was mailed</description>
    <inlineHelpText>Date abandoned letter was mailed</inlineHelpText>
    <label>Abandoned Letter Mailed</label>
    <type>Date</type>
</CustomField>