force-app/main/default/objects/Transition__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that transitioning Plan is attached to</description>
    <inlineHelpText>Account that transitioning Plan is attached to</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transitions</relationshipLabel>
    <relationshipName>Transitions</relationshipName>
    <type>Lookup</type>
</CustomField>