force-app/main/default/objects/Transition__c/fields/Blackout_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Date_Today__c</fullName>
    <formula>IF( Blackout_Start_Date__c   =  TODAY() , true, false)</formula>
    <label>Blackout Date Today</label>
    <type>Checkbox</type>
</CustomField>