force-app/main/default/objects/Transition__c/fields/Blackout_Notice_End__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Notice_End__c</fullName>
    <description>End of Participant Blackout Notice</description>
    <inlineHelpText>End of Participant Blackout Notice</inlineHelpText>
    <label>Blackout Notice End</label>
    <type>Date</type>
</CustomField>