force-app/main/default/objects/Transition__c/fields/Blackout_Notice_Start__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Notice_Start__c</fullName>
    <description>Date Blackout Notice is sent to Participants</description>
    <inlineHelpText>Date Blackout Notice is sent to Participants</inlineHelpText>
    <label>Blackout Notice Start</label>
    <type>Date</type>
</CustomField>