force-app/main/default/objects/Transition__c/fields/Blackout_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Start_Date__c</fullName>
    <label>Blackout Start Date</label>
    <type>Date</type>
</CustomField>