force-app/main/default/objects/Transition__c/fields/Cash_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Cash_Reconciled__c</fullName>
    <description>This field is to verify if the cash in the plan is reconciled to ten dollars or less for a plan</description>
    <inlineHelpText>This field is to verify if the cash in the plan is reconciled to ten dollars or less for a plan</inlineHelpText>
    <label>Cash Reconciled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>