force-app/main/default/objects/Transition__c/fields/Client_Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Client_Support_Team__c</fullName>
    <formula>TEXT(Account__r.Client_Support_Teams__c)</formula>
    <label>Client Support Team</label>
    <type>Text</type>
</CustomField>