force-app/main/default/objects/Transition__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date that Transition was marked complete</description>
    <inlineHelpText>Date that Transition was marked complete</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>