force-app/main/default/objects/Transition__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Main point of contact for the transition. The person listed here will receive the docusign envelope to sign.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transitions</relationshipLabel>
    <relationshipName>Transitions</relationshipName>
    <type>Lookup</type>
</CustomField>