force-app/main/default/objects/Transition__c/fields/Contributing_Event__c.field-meta.xml
<CustomField>
    <fullName>Contributing_Event__c</fullName>
    <description>Used to identify specific events that led to the Termination Reason</description>
    <inlineHelpText>Used to identify specific events that led to the Termination Reason</inlineHelpText>
    <label>Contributing Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>