force-app/main/default/objects/Transition__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <description>Custodian used by Client</description>
    <inlineHelpText>Custodian used by Client</inlineHelpText>
    <label>Custodian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schwab &amp; Co., Inc.</fullName>
            </value>
            <value>
                <fullName>MG Trust Company, LLC.</fullName>
            </value>
            <value>
                <fullName>TD Ameritrade</fullName>
            </value>
            <value>
                <fullName>Scottrade</fullName>
            </value>
            <value>
                <fullName>Schwab Trust</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>