force-app/main/default/objects/Transition__c/fields/Custodian_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Custodian_Account_ID__c</fullName>
    <description>Custodian account number</description>
    <inlineHelpText>Custodian account number</inlineHelpText>
    <label>Custodian Account ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>