force-app/main/default/objects/Transition__c/fields/Date_of_Plan_Termination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Plan_Termination__c</fullName>
    <label>Date of Plan Termination</label>
    <type>Date</type>
</CustomField>