force-app/main/default/objects/Transition__c/fields/Decon_Fee_Charged__c.field-meta.xml
<CustomField>
    <fullName>Decon_Fee_Charged__c</fullName>
    <description>This field is to charge the Deconversion wire fee to the plan prior to the wire being generated</description>
    <inlineHelpText>This field is to charge the Deconversion wire fee to the plan prior to the wire being generated</inlineHelpText>
    <label>Decon Fee Charged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>