force-app/main/default/objects/Transition__c/fields/Decon_Prep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Decon_Prep_Notes__c</fullName>
    <description>Any notes regarding Deconversion prep</description>
    <inlineHelpText>Any notes regarding Deconversion prep</inlineHelpText>
    <label>Decon Prep Notes</label>
    <length>18500</length>
    <type>LongTextArea</type>
</CustomField>