force-app/main/default/objects/Transition__c/fields/Decon_Provider__c.field-meta.xml
<CustomField>
    <fullName>Decon_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Competitor that plan is deconverting to.</description>
    <inlineHelpText>Competitor that plan is deconverting to.</inlineHelpText>
    <label>Decon Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transitions (Decon Provider)</relationshipLabel>
    <relationshipName>Transitions1</relationshipName>
    <type>Lookup</type>
</CustomField>