force-app/main/default/objects/Transition__c/fields/Deconversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Deconversion_Date__c</fullName>
    <description>This should be 60 days from receipt of letter unless other arrangements have been made.</description>
    <inlineHelpText>This should be 60 days from receipt of letter unless other arrangements have been made.</inlineHelpText>
    <label>Deconversion Date</label>
    <type>Date</type>
</CustomField>