force-app/main/default/objects/Transition__c/fields/Deconversion_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Deconversion_Email_Sent__c</fullName>
    <description>Date Deconversion Email sent to Plan Sponsor</description>
    <inlineHelpText>Please select the date the Deconversion Email was sent to the Plan Sponsor</inlineHelpText>
    <label>Deconversion Information Sent</label>
    <type>Date</type>
</CustomField>