force-app/main/default/objects/Transition__c/fields/Deconversion_Provider__c.field-meta.xml
<CustomField>
    <fullName>Deconversion_Provider__c</fullName>
    <label>Deconversion Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>