force-app/main/default/objects/Transition__c/fields/Delinquent_Payer_Termination__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Payer_Termination__c</fullName>
    <description>The default answer would be &apos;No&apos; unless &apos;Yes&apos; is selected by Accounting. If yes is selected, the client did not pay their final termination/deconversion fees and no final filings will be prepared.</description>
    <inlineHelpText>The default answer would be &apos;No&apos; unless &apos;Yes&apos; is selected by Accounting. If yes is selected, the client did not pay their final termination/deconversion fees and no final filings will be prepared.</inlineHelpText>
    <label>Delinquent Payer Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>