force-app/main/default/objects/Transition__c/fields/Distribution_Waiver_Received__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Waiver_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribution Waiver Received</label>
    <type>Checkbox</type>
</CustomField>