force-app/main/default/objects/Transition__c/fields/Docusign_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Recipient__c</fullName>
    <description>Filled in from Jotform or the Plan Button Transition Plan flow if they don&apos;t get Jotform.</description>
    <label>Docusign Recipient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>