force-app/main/default/objects/Transition__c/fields/Docusign_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Recipient_Email__c</fullName>
    <description>Filled in from Jotform or the Plan Button Transition Plan flow if they don&apos;t get Jotform.</description>
    <label>Docusign Recipient Email</label>
    <type>Email</type>
</CustomField>