force-app/main/default/objects/Transition__c/fields/Does_the_Plan_Have_Forfeitures__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Plan_Have_Forfeitures__c</fullName>
    <description>Confirm if plan has forfeitures</description>
    <inlineHelpText>Confirm if plan has forfeitures</inlineHelpText>
    <label>Does the Plan Have Forfeitures?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>