force-app/main/default/objects/Transition__c/fields/Exit_Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exit_Interview_Notes__c</fullName>
    <description>Use to add in exit interview text</description>
    <inlineHelpText>Use to add in exit interview text</inlineHelpText>
    <label>Exit Interview Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>