force-app/main/default/objects/Transition__c/fields/Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fee_Paid__c</fullName>
    <description>Indicates whether Transition Fee has paid or not</description>
    <inlineHelpText>Indicates whether Transition Fee has paid or not</inlineHelpText>
    <label>Fee Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>