force-app/main/default/objects/Transition__c/fields/Fees_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Fees_Disabled__c</fullName>
    <description>This field is to verify that we have suspended all fees for a plan.  If any fees are charged while a plan is in blackout it will cause the Deconversion to fail, therefore it is critical that fees be turned off prior to a blackout occurring for a plan.</description>
    <inlineHelpText>This field is to verify that we have suspended all fees for a plan.  If any fees are charged while a plan is in blackout it will cause the Deconversion to fail, therefore it is critical that fees be turned off prior to a blackout occurring for a plan.</inlineHelpText>
    <label>Fees Disabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>