force-app/main/default/objects/Transition__c/fields/Final_5500_Complete__c.field-meta.xml
<CustomField>
    <fullName>Final_5500_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Compliance completed the final 5500 for this plan?</description>
    <inlineHelpText>Has Compliance completed the final 5500 for this plan?</inlineHelpText>
    <label>Final 5500 Complete</label>
    <type>Checkbox</type>
</CustomField>