force-app/main/default/objects/Transition__c/fields/Final_5500_PYE__c.field-meta.xml
<CustomField>
    <fullName>Final_5500_PYE__c</fullName>
    <description>The final year that Ubiquity was responsible for 5500 prep.</description>
    <inlineHelpText>The final year that Ubiquity was responsible for 5500 prep.</inlineHelpText>
    <label>Final 5500 PYE</label>
    <type>Date</type>
</CustomField>