force-app/main/default/objects/Transition__c/fields/Final_Census_Payroll_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Final_Census_Payroll_Submitted__c</fullName>
    <description>Date final Census &amp; Payroll was submitted</description>
    <inlineHelpText>Date final Census &amp; Payroll was submitted</inlineHelpText>
    <label>Final Census &amp; Payroll Submitted</label>
    <type>Date</type>
</CustomField>