force-app/main/default/objects/Transition__c/fields/Final_Date_for_Distributions_Approval__c.field-meta.xml
<CustomField>
    <fullName>Final_Date_for_Distributions_Approval__c</fullName>
    <description>Last date to approve distributions</description>
    <inlineHelpText>Last date to approve distributions</inlineHelpText>
    <label>Final Date for Distributions Approval</label>
    <type>Date</type>
</CustomField>