force-app/main/default/objects/Transition__c/fields/Final_Docs__c.field-meta.xml
<CustomField>
    <fullName>Final_Docs__c</fullName>
    <label>Final Docs Sent</label>
    <type>Date</type>
</CustomField>