force-app/main/default/objects/Transition__c/fields/Final_Fees_Paid_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Final_Fees_Paid_Accounting__c</fullName>
    <label>Final Fees Paid (Accounting)</label>
    <type>Date</type>
</CustomField>