force-app/main/default/objects/Transition__c/fields/Final_Form_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Form_Complete_Date__c</fullName>
    <inlineHelpText>Date final transition form was completed. For plans that only fill out the form once, this date should match the Initial Form Complete Date</inlineHelpText>
    <label>Final Form Complete Date</label>
    <type>Date</type>
</CustomField>