force-app/main/default/objects/Transition__c/fields/Final_Form_Link_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Form_Link_Sent_Date__c</fullName>
    <inlineHelpText>Date the Final Form Link template was sent to client. If resent manually, please update this field.</inlineHelpText>
    <label>Final Form Link Sent Date</label>
    <type>Date</type>
</CustomField>