force-app/main/default/objects/Transition__c/fields/Final_Invoice_Sent_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Sent_Accounting__c</fullName>
    <label>Final Invoice Sent (Accounting)</label>
    <type>Date</type>
</CustomField>