force-app/main/default/objects/Transition__c/fields/Final_Payroll_In_Terminated_Year__c.field-meta.xml
<CustomField>
    <fullName>Final_Payroll_In_Terminated_Year__c</fullName>
    <description>Was final payroll in same year as termination?</description>
    <inlineHelpText>Was final payroll in same year as termination?</inlineHelpText>
    <label>Final Payroll In Terminated Year?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>