force-app/main/default/objects/Transition__c/fields/Final_Plan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Final_Plan_Balance__c</fullName>
    <description>Terminations = Plan Case Balance on Date of Termination in RKS
Deconversion = SUM of &quot;Disbursements&quot; on the &quot;Plan_Deconversion&quot; Transaction</description>
    <inlineHelpText>Terminations = Plan Case Balance on Date of Termination in RKS
Deconversion = SUM of &quot;Disbursements&quot; on the &quot;Plan_Deconversion&quot; Transaction</inlineHelpText>
    <label>Final Plan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>