force-app/main/default/objects/Transition__c/fields/Final_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Reporting_Date__c</fullName>
    <description>Date Final Reporting is completed</description>
    <inlineHelpText>Date Final Reporting is completed</inlineHelpText>
    <label>Final Reporting Date</label>
    <type>Date</type>
</CustomField>