force-app/main/default/objects/Transition__c/fields/Final_SDBA_Liquidation__c.field-meta.xml
<CustomField>
    <fullName>Final_SDBA_Liquidation__c</fullName>
    <description>Date Self Directed Brokerage Account or Personal Choice Retirement Account must by liquidated by</description>
    <inlineHelpText>Date Self Directed Brokerage Account or Personal Choice Retirement Account must by liquidated by</inlineHelpText>
    <label>Final SDBA Liquidation</label>
    <type>Date</type>
</CustomField>