force-app/main/default/objects/Transition__c/fields/Final_Testing_Calculations_Complete__c.field-meta.xml
<CustomField>
    <fullName>Final_Testing_Calculations_Complete__c</fullName>
    <description>Date final testing &amp; calculations are complete (Compliance)</description>
    <inlineHelpText>Date final testing &amp; calculations are complete (Compliance)</inlineHelpText>
    <label>Final Testing &amp; Calculations Complete</label>
    <type>Date</type>
</CustomField>