force-app/main/default/objects/Transition__c/fields/Final_Valuation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Final_Valuation_Completed__c</fullName>
    <label>Final Valuation Completed</label>
    <type>Date</type>
</CustomField>