force-app/main/default/objects/Transition__c/fields/Final_Valuation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Final_Valuation_Requested__c</fullName>
    <label>Final Valuation Requested</label>
    <type>Date</type>
</CustomField>