force-app/main/default/objects/Transition__c/fields/Force_Out_Required__c.field-meta.xml
<CustomField>
    <fullName>Force_Out_Required__c</fullName>
    <description>Are there participants required to be forced out so that this plan is eligible for a Solo(k) account?</description>
    <inlineHelpText>Are there participants required to be forced out so that this plan is eligible for a Solo(k) account?</inlineHelpText>
    <label>Force Out&apos;s Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>