force-app/main/default/objects/Transition__c/fields/Forfeiture__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture__c</fullName>
    <description>This field is to record if a plan has forfeiture, and if it has been liquidated</description>
    <inlineHelpText>This field is to record if a plan has forfeiture, and if it has been liquidated</inlineHelpText>
    <label>Forfeiture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>