force-app/main/default/objects/Transition__c/fields/Forfeiture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeiture_Amount__c</fullName>
    <description>Amount of forfeiture, if applicable</description>
    <inlineHelpText>Amount of forfeiture, if applicable</inlineHelpText>
    <label>Forfeiture Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>