force-app/main/default/objects/Transition__c/fields/Form_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Form_Payroll_Provider__c</fullName>
    <description>Payroll Provider enterer on Transition Inquiry Form</description>
    <inlineHelpText>Payroll Provider enterer on Transition Inquiry Form</inlineHelpText>
    <label>Form Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>