force-app/main/default/objects/Transition__c/fields/Has_PCRA__c.field-meta.xml
<CustomField>
    <fullName>Has_PCRA__c</fullName>
    <description>This field is to verify if the plan has PCRA funds included in the account balance.  PCRA accounts require additional work to address.</description>
    <inlineHelpText>This field is to verify if the plan has PCRA funds included in the account balance.  PCRA accounts require additional work to address.</inlineHelpText>
    <label>PCRA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>