force-app/main/default/objects/Transition__c/fields/Hold_Distribution_until_Final_Val_Comp__c.field-meta.xml
<CustomField>
    <fullName>Hold_Distribution_until_Final_Val_Comp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hold distribution until Final Val Complete.</inlineHelpText>
    <label>Hold Distribution until Final Val Comp.</label>
    <type>Checkbox</type>
</CustomField>