force-app/main/default/objects/Transition__c/fields/Initial_Form_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Form_Complete_Date__c</fullName>
    <label>Initial Form Complete Date</label>
    <type>Date</type>
</CustomField>