force-app/main/default/objects/Transition__c/fields/Initial_Form_Link_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Form_Link_Sent_Date__c</fullName>
    <inlineHelpText>Date the Initial Form Link template was sent to client. If resent manually, please update this field.</inlineHelpText>
    <label>Initial Form Link Sent Date</label>
    <type>Date</type>
</CustomField>