force-app/main/default/objects/Transition__c/fields/Investments__c.field-meta.xml
<CustomField>
    <fullName>Investments__c</fullName>
    <description>This field is to verify if the investments are reconciled to one share or less for all investments</description>
    <inlineHelpText>This field is to verify if the investments are reconciled to one share or less for all investments</inlineHelpText>
    <label>Investments Reconciled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>