force-app/main/default/objects/Transition__c/fields/Is_Plan_Vesting_100__c.field-meta.xml
<CustomField>
    <fullName>Is_Plan_Vesting_100__c</fullName>
    <description>Verify if plan vesting is 100%</description>
    <inlineHelpText>Verify if plan vesting is 100%</inlineHelpText>
    <label>Is Plan Vesting 100%?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>