force-app/main/default/objects/Transition__c/fields/Last_Date_to_Submit_Distrib__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_to_Submit_Distrib__c</fullName>
    <description>Last date to submit distributions</description>
    <inlineHelpText>Last date to submit distributions</inlineHelpText>
    <label>Final Date for Distributions Submission</label>
    <type>Date</type>
</CustomField>