force-app/main/default/objects/Transition__c/fields/Last_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Last_Payroll__c</fullName>
    <label>Last Payroll</label>
    <type>Date</type>
</CustomField>