force-app/main/default/objects/Transition__c/fields/Liquidation_Date__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_Date__c</fullName>
    <label>Liquidation Date</label>
    <type>Date</type>
</CustomField>