force-app/main/default/objects/Transition__c/fields/Matrix_Current__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Current__c</fullName>
    <description>Amount of quarterly fees assessed</description>
    <inlineHelpText>Amount of quarterly fees assessed</inlineHelpText>
    <label>Matrix Current Quarter Fees Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>