force-app/main/default/objects/Transition__c/fields/Matrix_Current_Quarter_Fees__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Current_Quarter_Fees__c</fullName>
    <description>Current Quarter Fees assessed</description>
    <inlineHelpText>Current Quarter Fees assessed</inlineHelpText>
    <label>Matrix Current Quarter Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>