force-app/main/default/objects/Transition__c/fields/MEP__c.field-meta.xml
<CustomField>
    <fullName>MEP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Term/Merger left for a MEP</description>
    <inlineHelpText>Term/Merger left for a MEP</inlineHelpText>
    <label>MEP</label>
    <type>Checkbox</type>
</CustomField>