force-app/main/default/objects/Transition__c/fields/Monthly_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Revenue__c</fullName>
    <description>Manual entry, not used for single(k)</description>
    <inlineHelpText>Enter the sum of: 1)  Most Recent Monthly Participant Fee Revenue and 2) Most Recent Monthly Admin Fee Invoice (divide by 3 if quarterly invoices). This information is available in Paradigm. Contact your manager for guidance as needed.</inlineHelpText>
    <label>Monthly Recurring Revenue (MRR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>