force-app/main/default/objects/Transition__c/fields/Morley_Stable_Value_Fund__c.field-meta.xml
<CustomField>
    <fullName>Morley_Stable_Value_Fund__c</fullName>
    <description>This field is to verify if the plan has a Morley fund or stable value fund. These funds cannot be liquidated on demand, they require notification to the fund family.</description>
    <inlineHelpText>This field is to verify if the plan has a Morley fund or stable value fund. These funds cannot be liquidated on demand, they require notification to the fund family.</inlineHelpText>
    <label>Morley/Stable Value Fund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>