force-app/main/default/objects/Transition__c/fields/Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Name_Change__c</fullName>
    <description>We need to update compliance docs to make sure the plan is recorded as Deconverted for future compliance reporting</description>
    <inlineHelpText>We need to update compliance docs to make sure the plan is recorded as Deconverted for future compliance reporting</inlineHelpText>
    <label>Name Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>