force-app/main/default/objects/Transition__c/fields/New_Plan_EIN__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_EIN__c</fullName>
    <description>Enter the EIN for the new Plan the the existing Ubiquity Plan is merging with.
Format=XX-XXXXXXX</description>
    <inlineHelpText>Enter the EIN for the new Plan the the existing Ubiquity Plan is merging with.
Format=XX-XXXXXXX</inlineHelpText>
    <label>New Plan EIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>