force-app/main/default/objects/Transition__c/fields/New_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_Name__c</fullName>
    <description>The name of the new Plan that the existing Plan with Ubiquity is merging with.</description>
    <inlineHelpText>The name of the new Plan that the existing Plan with Ubiquity is merging with.</inlineHelpText>
    <label>New Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>