force-app/main/default/objects/Transition__c/fields/New_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Plan_Number__c</fullName>
    <description>Plan Number for the new plan the existing Ubiquity Plan is merging with (002,003, etc.).</description>
    <inlineHelpText>Plan Number for the new plan the existing Ubiquity Plan is merging with (002,003, etc.).</inlineHelpText>
    <label>New Plan Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>