force-app/main/default/objects/Transition__c/fields/New_Provider_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Provider_Email_Address__c</fullName>
    <description>Filled in from Transition JotForm</description>
    <inlineHelpText>Filled in from Transition JotForm</inlineHelpText>
    <label>New Provider Email Address</label>
    <type>Email</type>
</CustomField>