force-app/main/default/objects/Transition__c/fields/New_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Provider_Name__c</fullName>
    <description>Filled in from Transition JotForm</description>
    <inlineHelpText>Filled in from Transition JotForm</inlineHelpText>
    <label>New Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>