force-app/main/default/objects/Transition__c/fields/Next_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Date__c</fullName>
    <description>Date of next invoice</description>
    <inlineHelpText>Date of next invoice</inlineHelpText>
    <label>Next Billing Date</label>
    <type>Date</type>
</CustomField>